--- a/sales/templates/sales/sales_today.html
+++ b/sales/templates/sales/sales_today.html
@@ -51,12 +51,12 @@
                 </table>
             </div>
             <div class="d-flex justify-content-end gap-3">
-                {% if sale.discount %}
-                    <span class="text-danger small">Скидка на чек: {{ sale.discount }} сом</span>
-                {% endif %}
+                <a href="{% url 'sale_print' sale.id %}" class="btn btn-sm btn-outline-primary">
+                        🖨 Печать
+                </a>
                 <span class="fw-bold">Итого по чеку: {{ sale.total }} сом</span>
             </div>
+
         </div>
     {% endfor %}
 {% endblock %}
-
